new extension system and reworked compiler